--- a/common.css
+++ b/common.css
@@ -259,4 +259,5 @@ i {
     padding-left: 30px;
     font-size: 12px;
     color: grey;
+    clear: both;
 }
